# Smart_Recipe_Keeper

./: .gitignore  CLAUDE.md  PROGRESS_REPORT.md  PROJECT_PLAN.md  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: auth.py  recipes.py  users.py
backend/app/core/: constants.py  gemini.py  security.py
backend/app/models/: recipe.py  user.py
backend/app/schemas/: recipe.py  user.py
backend/app/services/extractors/: __init__.py  website.py  youtube.py
frontend/: .env.example  next.config.js  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/types/: recipe.ts
